2002-09-28	<mschimek@users.sf.net>

	* test/Makefile.am: No automatic tests.
	* po/fr.po: Updated by Christian Marillat.

2002-09-26	<mschimek@users.sf.net>

	* src/export.c, src/export.h, src/io.h, src/teletext.c: gettext()
	  fix, should have been dgettext(). Oops.
	* src/wss.c: Aspect ratio event reported incorrect 16:9 anamorphic
	  aspect 16/9, changed to 3/4.

2002-07-30	<mschimek@users.sf.net>

	* src/cache.c: Fixed buffer overflow (SRTL bug).
	* src/exp-txt.c: Fixed double spaces and double height
	  row bug in vbi_print_page_region().
	* src/lang.c: Prime Hebrew won't fix, they transmit language
	  code 0x00 English. Suggest per page language menu, for now
	  added 0x80 entry in vbi_font_descriptors.
	* Prime CNI won't fix, they registered one but don't transmit.
	  Another candidate for TODO #011.
	* src/decoder.c: Increased MAX_WAYS to fix ./osc --sim --pal
	  identification of CC-625.

2002-07-04	<mschimek@users.sf.net>

	* doc, src: Switched to Doxygen.

2002-06-22	<mschimek@users.sf.net>

	* doc/Makefile.am: Modified to permit building libzvbi in
	  a separate directory.
	* src/Makefile.am: Forgot to escape extern "C".
	* src/export.h: Removed C++ reserved export identifier.

2002-06-17	<mschimek@users.sf.net>

	* m4, po, config.rpath: Added because cannot use autogen.sh
	  gettextize --force since gettext 0.11. The fine hack insists
	  on updating already updated Makefile.am's and configure.in.
	* po/Rules-quot: s/PACKAGE VERSION/... because msgfmt complains.

2002-06-17  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add m4.
	(SUBDIRS): Remove intl.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add config.rpath.
	* configure.in (AC_OUTPUT): Add m4/Makefile.

2002-06-14	<mschimek@users.sf.net>

	* doc/zdoc-scan: Fix re zapping-Bugs-568052. 

2002-06-13	<mschimek@users.sf.net>

	* src/export.c: vbi_export_info_keyword() cuts option string off the
	  keyword, a convenience.

2002-06-08	<mschimek@users.sf.net>
