@@ -1,0 +1,3 @@
+#!/bin/sh
+# Check export options
+./explist --check
